kubernetes/staging/spike/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: staging
  name: spike
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: spike
    spec:
      containers:
        - name: spike
          image: docker.io/tevjef/spike:staging
          imagePullPolicy: "Always"
          ports:
            - containerPort: 13100
              name: pprof
            - containerPort: 13000
              name: metrics-port
              protocol: TCP
            - containerPort: 9876
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /v2/universities
              port: 9876
              httpHeaders:
                - name: X-Health-Check
                  value: "true"
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 50Mi
