kubernetes/staging/spike/metrics.yml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: spike
  labels:
    app: spike
spec:
  selector:
    app: spike
  ports:
  - name: uct-metrics
    port: 13000
    protocol: TCP
    targetPort: uct-metrics
